--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,12 @@
 .b-radious{
     border-radius: 20px;
 }
+.txt-highlight{
+    color: #FABE4C;
+}
+.txt-highlight-2{
+    color: #A4BC46;
+}
+.txt-highlight-3{
+    color:#363958 ;
+}
