--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+*{
+    font-family: 'Roboto', sans-serif;
+}
+li a:hover{
+    background-color:#FABE4C ;
+    border-radius: 10px;
+    color: white;
+}
 .btn-coustom{
     background-color: #9BB633;
     color: white;
